# llm-public-opinion-daily-report-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/analysis/: __init__.py  structured.py
app/api/: router.py
app/api/routes/: dashboard.py  health.py  placeholders.py
app/automation/: __init__.py  daily.py
app/config/: settings.py
app/core/: config.py  logging.py
app/db/: base.py  engine.py  models.py  repositories.py  seed.py  session.py
app/evaluation/: __init__.py  benchmarks.py  metrics.py  service.py
app/ingestion/: __init__.py  contracts.py  local.py  rss.py  service.py
app/llm/: README.md  __init__.py  client.py  contracts.py  prompts.py
app/preprocessing/: __init__.py  dedupe.py  language.py  pipeline.py  quality.py  text.py
app/reporting/: __init__.py  service.py
app/reporting/templates/: daily_report.html.j2  daily_report.md.j2
app/risk/: __init__.py  scoring.py  service.py
app/schemas/: __init__.py  analysis.py  common.py  domain.py  health.py
app/utils/: logging.py
app/validation/: __init__.py  demo.py
dashboard/: Home.py  app.py
dashboard/pages/: 1_Risk_Overview.py  2_Report_Archive.py
data/samples/: local_articles.csv  opinion_sample.json  rss_sample.xml
docs/: PRD.md  architecture.md  demo_workflow.md  deployment.md  evaluation.md  final_validation.md  methodology.md  roadmap.md
tests/: conftest.py  test_automation.py  test_backend.py  test_config.py  test_dashboard_api.py  test_evaluation.py  test_ingestion.py  test_llm_analysis.py  test_persistence.py  test_reporting.py  test_repository_structure.py  test_risk_scoring.py  test_schemas.py  test_validation.py
tests/integration/: test_health_api.py
tests/unit/: test_analysis_schemas.py  test_db_models.py  test_project_structure.py  test_settings.py
