[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-opinion-risk-monitor"
version = "0.1.0"
description = "LLM-enhanced public opinion monitoring and daily risk report generation system."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Project Team" }]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlmodel>=0.0.18,<1.0",
    "streamlit>=1.34,<2.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
]
llm = [
    "openai>=1.30,<2.0",
]

[project.scripts]
opinion-monitor = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
